# corsicana

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
benchmark/: CMakeLists.txt  bench_corsicana.cpp  bench_harness.hpp  bench_naive.cpp
ci/: codecov.sh
include/corsicana/: basic_result.hpp  basic_trie.hpp  basic_trie_builder.hpp  match.hpp  result_io.hpp  trie.hpp
include/corsicana/internal/: data.hpp  match_state.hpp  node.hpp
test/: CMakeLists.txt  benchmark.cpp  test_basic_result.cpp  test_basic_trie.cpp  test_basic_trie_builder.cpp  test_data.cpp  test_main.cpp  test_match.cpp  test_match_state.cpp  test_trie_search.cpp  test_trie_types.cpp
